--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.11",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~43.0.2",
+    "expo-app-loading": "^1.2.1",
     "expo-status-bar": "~1.1.0",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
@@ -21,7 +23,10 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-swipe-gestures": "^1.0.5",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-route": "^1.0.3",
+    "styled-components": "^5.3.3",
+    "undefined": "@react-native-async\u0002storage/async-storage"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
