add: burger bar, but error

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.15.11",
+    "@react-native-async-storage/async-storage": "^1.15.13",
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
@@ -18,6 +19,7 @@
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.3.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.3.2",
@@ -25,9 +27,9 @@
     "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "0.17.1",
     "react-route": "^1.0.3",
+    "react-router-dom": "^6.0.2",
     "styled-components": "^5.3.3",
-    "undefined": "@react-native-async\u0002storage/async-storage",
-    "@react-native-community/datetimepicker": "3.5.2"
+    "undefined": "@react-native-async\u0002storage/async-storage"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
