--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "react-native-safe-area-context": "^3.3.2",
         "react-native-screens": "^3.9.0",
         "react-native-swipe-gestures": "^1.0.5",
+        "react-native-swipe-list-view": "^3.2.9",
         "react-native-web": "0.17.1",
         "react-route": "^1.0.3",
         "styled-components": "^5.3.3",
