--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.0.11",
     "expo": "~43.0.2",
     "expo-app-loading": "^1.2.1",
+    "expo-image-picker": "~11.0.3",
     "expo-status-bar": "~1.1.0",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
@@ -32,8 +33,8 @@
     "react-native-web": "0.17.1",
     "react-route": "^1.0.3",
     "styled-components": "^5.3.3",
-    "undefined": "@react-native-async-storage/async-storage",
-    "expo-image-picker": "~11.0.3"
+    "touchable-opacity-scale": "^1.0.2",
+    "undefined": "@react-native-async-storage/async-storage"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
