--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-drag-list": "^1.1.0",
+    "react-freeze": "^1.0.0",
+    "react-freezeframe": "^5.0.2",
     "react-native": "0.64.3",
     "react-native-draggable-flatlist": "^3.0.3",
     "react-native-elements": "^3.4.2",
