--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "17.0.1",
     "react-drag-list": "^1.1.0",
     "react-native": "0.64.3",
+    "react-native-calendars": "^1.1274.0",
     "react-native-draggable-flatlist": "^3.0.3",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^1.10.3",
